# dbus-prebuilts

./: CMakeLists.txt
include/dbus-1.12.20/: Doxyfile  Makefile  config.h  config.status  dbus-1-uninstalled.pc  dbus-1.pc  libtool
include/dbus-1.12.20/bus/: Makefile  dbus-daemon  dbus-daemon-launch-helper  dbus.service  session.conf
include/dbus-1.12.20/dbus/: Makefile  Version  dbus-asv-util.lo  dbus-auth-script.lo  dbus-auth-util.lo  dbus-credentials-util.lo  dbus-mainloop.lo  dbus-marshal-byteswap-util.lo  dbus-marshal-recursive-util.lo  dbus-marshal-validate-util.lo  dbus-message-factory.lo  dbus-message-util.lo  dbus-shell.lo  dbus-socket-set-epoll.lo  dbus-socket-set-poll.lo  dbus-socket-set.lo  dbus-spawn.lo  dbus-string-util.lo  dbus-sysdeps-util-unix.lo  dbus-sysdeps-util.lo  dbus-test.lo  dbus-userdb-util.lo  libdbus-1.la  libdbus-internal.la  libdbus_1_la-dbus-address.lo  libdbus_1_la-dbus-auth.lo  libdbus_1_la-dbus-bus.lo  libdbus_1_la-dbus-connection.lo  libdbus_1_la-dbus-credentials.lo  libdbus_1_la-dbus-dataslot.lo  libdbus_1_la-dbus-errors.lo  libdbus_1_la-dbus-file-unix.lo  libdbus_1_la-dbus-file.lo  libdbus_1_la-dbus-hash.lo  libdbus_1_la-dbus-internals.lo  libdbus_1_la-dbus-keyring.lo  libdbus_1_la-dbus-list.lo  libdbus_1_la-dbus-marshal-basic.lo  libdbus_1_la-dbus-marshal-byteswap.lo  libdbus_1_la-dbus-marshal-header.lo  (+32 more)
include/dbus-1.12.20/doc/: Makefile
include/dbus-1.12.20/test/: Makefile  manual-authz  manual-backtrace  manual-dir-iter  manual-tcp  manual-test-thread-blocking  test-corrupt  test-dbus-daemon  (+18 more)
lib/: libdbus-1.so.3.19.13
(+193 files in other folders)
